cluster/apps/services/nextcloud/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-nextcloud
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`cloud.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        # - name: basicauth
        # - name: headers-sts
        - name: nextcloud
        # - name: rfc1918
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: Middleware
# metadata:
#   name: nextcloud
#   namespace: networking
# spec:
#   redirectRegex:
#     regex: https://(.*)/.well-known/(card|cal)dav
#     replacement: https://${1}/remote.php/dav/
